--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/rsnt/resonated">View on GitHub</a>
 
-          <h1 id="project_title">Resonated</h1>
+          <h1 id="project_title">Resonated YEAHH</h1>
           <h2 id="project_tagline">Handpicked Bootstrap Wordpress Themes</h2>
 
             <section id="downloads">
