--- a/index.html
+++ b/index.html
@@ -11,44 +11,55 @@
     <title>Beautiful Bootstrap Wordpress Themes</title>
 
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 
-    <!-- Custom styles for this template -->
-    <link href="assets/css/theme.css" rel="stylesheet">
-    <link href="assets/css/animate.css" rel="stylesheet">
+    <!-- Custom theme -->
+    <link rel="stylesheet" href="assets/css/theme.css">
+    <link rel="stylesheet" href="assets/css/easy-responsive-tabs.css">
+    <link rel="stylesheet" href="assets/css/animate.css">
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 
     <!-- Latest font-awesoness -->
     <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
     <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet">
 
-      <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-      <!--[if lt IE 9]>
-        <script src="assets/js/html5shiv.js"></script>
-        <script src="assets/js/respond.min.js"></script>
-      <![endif]-->
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
 
     <!-- Google fonts -->
-    <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900' rel='stylesheet' type='text/css'>
+    <!-- <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900' rel='stylesheet' type='text/css'> -->
+    <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700,900,400italic,600italic,700italic|Varela+Round&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
   </head>
 <body>
-  <div class="container fluid">
+  <!-- Jumbotron -->
+    <div class="jumbotron">
+      <div class="container">
+      <h1 class="">Responsive Bootstrap Themes for Wordpress</h1>
+      <i class="fa fa-angle-down big"></i>
+    </div>
+  </div>
+  <div class="container fluid animated fadeInDown">
     <div class="browsertop">
-        <i class="fa fa-circle green"></i>
-        <i class="fa fa-circle yellow"></i>
-        <i class="fa fa-circle red"></i>
+        <i class="fa fa-circle green dots"></i>
+        <i class="fa fa-circle yellow dots"></i>
+        <i class="fa fa-circle red dots"></i>
       </div>
       <div class="browser">
         <div class="col-md-1">
-          <i class="fa fa-chevron-left grey"></i>
-          <i class="fa fa-chevron-right grey"></i>
+          <i class="fa fa-chevron-left greyarrow"></i>
+          <i class="fa fa-chevron-right greyarrow"></i>
         </div>
         <div class="col-md-8 addressfield">
           <select id="theme-select" name="themes"></select>
             <a href="#fakelink" id="btn-info" class="btn btn-default">More info</a>
         </div>
-        <div class="col-md-2">
-          
-          <a href="#fakelink" id="btn-buy" class="btn btn-primary pull-right">Purchase!</a>
+        <div class="col-md-3">
+            <a href="#fakelink" id="btn-buy" class="btn btn-primary btn-lg">Purchase!</a>
         </div>
           <iframe></iframe>        
         </div>
