--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
           <i class="fa fa-chevron-right greyarrow"></i>
         </div>
         <div class="col-md-8 addressfield">
+          <i class="fa fa-file grey"></i>
           <select id="theme-select" name="themes"></select>
             <a href="#fakelink" id="btn-info" class="btn btn-default">More info</a>
         </div>
