--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <i class="fa fa-angle-down big"></i>
     </div>
   </div>
-  <div class="container fluid animated fadeInDown">
+  <div class="container fluid">
     <div class="browsertop">
         <i class="fa fa-circle green dots"></i>
         <i class="fa fa-circle yellow dots"></i>
@@ -54,16 +54,14 @@
           <i class="fa fa-chevron-left greyarrow"></i>
           <i class="fa fa-chevron-right greyarrow"></i>
         </div>
-        <div class="col-md-8 addressfield">
+        <div class="col-md-10 addressfield">
           <i class="fa fa-file grey"></i>
           <select id="theme-select" name="themes"></select>
-            <a href="#fakelink" id="btn-info" class="btn btn-default">More info</a>
+            <a href="#fakelink" id="btn-info" class="btn btn-default">Details &amp; Download</a>
         </div>
-        <div class="col-md-3">
-            <a href="#fakelink" id="btn-buy" class="btn btn-primary btn-lg">Purchase!</a>
-        </div>
+
           <iframe></iframe>        
-        </div>
+      </div>
     </div>
 </div> <!-- /container -->
 
