--- a/templates.html
+++ b/templates.html
@@ -8,7 +8,7 @@
 
     <link rel="shortcut icon" href="assets/ico/favicon.png">
 
-    <title>Beautiful Bootstrap Templates</title>
+    <title>Beautiful Bootstrap Wordpress Themes</title>
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
@@ -43,12 +43,7 @@
       <i class="fa fa-angle-down big"></i>
     </div>
   </div>
-  <div class="container dark fluid">
-    <h1 class="">Responsive Bootstrap Themes for Wordpress</h1>
-      <p>lipsum</p>
-  </div>
   <div class="container fluid">
-    <div class="wrap">
     <div class="browsertop">
         <i class="fa fa-circle green dots"></i>
         <i class="fa fa-circle yellow dots"></i>
@@ -59,7 +54,7 @@
           <i class="fa fa-chevron-left greyarrow"></i>
           <i class="fa fa-chevron-right greyarrow"></i>
         </div>
-        <div class="col-md-8 addressfield">
+        <div class="col-md-10 addressfield">
           <i class="fa fa-file grey"></i>
           <select id="theme-select" name="themes"></select>
             <a href="#fakelink" id="btn-info" class="btn btn-default">Details &amp; Download</a>
@@ -67,7 +62,6 @@
 
           <iframe></iframe>        
       </div>
-    </div>
     </div>
 </div> <!-- /container -->
 
